<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/iconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rubrica_circle_avatar"
            android:text="@string/undefinedAvatarName"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_weight="0"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >
            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefinedName"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefinedNumber"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="end"
        >
        <ImageButton
            android:id="@+id/call_number_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/call_24dp"
            android:layout_marginRight="10dp"
            />
        <ImageButton
            android:id="@+id/edit_number_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_24dp"
            />
    </LinearLayout>
</LinearLayout>