<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.EditFragment"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/icon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_circle_avatar"
                android:text="@string/undefinedAvatarName"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/name_hint_label"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/surname_hint_label"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/number_hint_label"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_save"
                    android:layout_margin="10dp"
                    />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_delete"
                    android:layout_margin="10dp"
                    android:visibility="visible"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
